# MeCP

./: .gitignore  .gitmodules  API_DOCUMENTATION.md  ARCHITECTURE.md  BROWSER_CACHE_CLEAR.md  CHANGELOG.md  CHATGPT_TROUBLESHOOTING.md  CLI_USAGE.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  DASHBOARD_EXPANDABLE_DETAILS.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_PERSISTENT_EXPAND.md  DASHBOARD_QUICKSTART.md  DASHBOARD_USAGE_GUIDE.md  DATABASE_PERSISTENCE_FIX.md  DATABASE_SETUP.md  DOCUMENTATION_INDEX.md  GITHUB_READY_SUMMARY.md  INSTALLATION.md  LICENSE  MECP_CLI_SUMMARY.md  MIGRATION_RESPONSE_DATA.md  MYSQL_DATA_LOADING_FIX.md  PROJECT_SUMMARY.md  Procfile  QUICKREF_CLI.md  QUICKSTART.md  README.md  RESPONSE_DATA_FEATURE.md  SETUP_COMPLETE.md  TESTING.md  TEST_EXECUTION_REPORT.md  TEST_SCRIPTS_README.md  WEB3_AUTH_GUIDE.md  WEB3_AUTH_IMPLEMENTATION.md  WEB3_AUTH_QUICKSTART.md  WEB3_AUTH_SUMMARY.md  config.toml  (+1 more)
.github/: pull_request_template.md
dashboard/: index.html  login.html
examples/: dashboard_usage.rs  database_usage.rs  llm_usage.rs  test_client.rs
memo/: CHATGPT_MCP_SETUP.md  CHATGPT_TOOLS.md  CLOUDFLARE_FIX.md  CLOUDFLARE_SETUP.md  DASHBOARD_ACCESS.md  GCE_SETUP.md  HTTPS_SETUP.md  README.md
scripts/: README.md  init-mysql-db.sh  install-milvus.sh  install-mysql.sh  install-neo4j.sh  migrate-database.sh  migrate_add_response_data.sql  reset-all.sh  reset-history-logs.sh  reset-mysql.sh  reset-neo4j.sh  setup-auth-example.sh  setup_history_logs.sql  test-dashboard-flow.sh
src/: lib.rs  main.rs
tests/: dashboard_test.rs  integration_test.rs
(+36 files in other folders)
