[package]
name = "mecp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
toml = "0.8"
colored = "2.1"
mysql_async = "0.34"
ethers = { version = "2.0", features = ["legacy"] }
jsonwebtoken = "9.3"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.5", features = ["full"] }
lazy_static = "1.4"
rand = "0.8"

[[example]]
name = "database_usage"
path = "examples/database_usage.rs"

[[example]]
name = "llm_usage"
path = "examples/llm_usage.rs"

[[example]]
name = "dashboard_usage"
path = "examples/dashboard_usage.rs"

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[[bin]]
name = "mecp"
path = "src/main.rs"

[[bin]]
name = "mecp-cli"
path = "src/bin/mecp-cli.rs"

[lib]
name = "mecp"
path = "src/lib.rs"

[features]
default = []
